test/tests/compiler/8_loops/valid/extra_credit/plx1_kw1_in_names.plx
pub fn main(none) i32 {
    match1: i32 = 10
    otherwise1: i32 = 20
    
    return otherwise1 - (otherwise1 / match1) * match1
}
