test/tests/compiler/8_loops/invalid_semantics/continue_not_in_loop.plx
pub fn main(none) i32 {
    {
        a: i32;
        continue
    }
    return 0
}
